cloudexpo/src/objects/Club__c.object
<CustomObject>
    <description>Object to represent individual clubs</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClubID__c</fullName>
        <description>External eClubID for Club</description>
        <externalId>true</externalId>
        <label>ClubID</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_on_Website_as__c</fullName>
        <label>Display on Website as</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Facility_Amenities__c</fullName>
        <label>Facility Amenities</label>
        <picklist>
            <picklistValues>
                <fullName>Group Fitness Classes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boxing Studio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studio Cycling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yoga Studio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steam Room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coat Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WiFi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creche</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Juice Bar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pilates Studio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardio Strength Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laundry Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day Lockers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locker Room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full-service Spa</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Facility_Id_eClub__c</fullName>
        <label>Facility Id - eClub</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Name__c</fullName>
        <label>Facility Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_TimeZone__c</fullName>
        <label>Facility TimeZone</label>
        <picklist>
            <picklistValues>
                <fullName>Pacific Daylight Time (America/Los_Angeles)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Facility_Type__c</fullName>
        <label>Facility Type</label>
        <picklist>
            <picklistValues>
                <fullName>Need picklist values</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>General_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The General Manager of this Club</inlineHelpText>
        <label>General Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Clubs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Global_Region__c</fullName>
        <label>Global Region</label>
        <picklist>
            <picklistValues>
                <fullName>Domestic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Group_Fitness_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Fitness Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Clubs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsSFDCPilot__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be used to determine whether the club is in Pilot or not</description>
        <label>IsSFDCPilot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <label>Legacy Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <label>Migration ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Region__c</fullName>
        <label>National Region</label>
        <picklist>
            <controllingField>Global_Region__c</controllingField>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Coast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Coast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PT_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Personal Ttraining Manager of the club</description>
        <label>PT Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Clubs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Local Region</label>
        <picklist>
            <controllingField>National_Region__c</controllingField>
            <picklistValues>
                <fullName>Chicago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Texas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Jersey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toronto Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Regional_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Clubs3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source System</label>
        <referenceTo>Source_System__c</referenceTo>
        <relationshipLabel>Clubs</relationshipLabel>
        <relationshipName>Clubs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebClub_Id__c</fullName>
        <label>WebClub Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Inquiry_Email__c</fullName>
        <label>Web Inquiry Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isAvailableOnline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAvailableOnline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lC_Id__c</fullName>
        <label>lC Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Club</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ClubID__c</columns>
        <columns>NAME</columns>
        <columns>Facility_Id_eClub__c</columns>
        <columns>Facility_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Source_System__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Club Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clubs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>